Fixed constant text size causing issues on mobile for staff and stage in two separate ways

--- a/css/staff.css
+++ b/css/staff.css
@@ -1,9 +1,8 @@
 .scrollframe{
     position: absolute;
-    padding-top: 10px;
     left: 2.4%;
     top: 5.2%;
-    /* background-color: rgba(255,255,255,0.8); */
+    background-color: rgba(255,255,255,0.8);
     overflow-y: auto;
     height: 88.13%;
     width: 95.1%;
@@ -18,6 +17,11 @@ h1{
     white-space: initial;
     font-size: 25px;
     text-align: center;
+}
+@media (pointer:none), (pointer:coarse){
+    .credits{
+        font-size: 1.3vw;
+    }
 }
 .gallery{
     display: grid;
