--- a/css/stage.css
+++ b/css/stage.css
@@ -13,7 +13,7 @@
 }
 .scrollframe p{
     padding: 0px 5px; 
-    font-size: 25px;
+    font-size: 1.3vw;
     text-align: center;
 }
 .scrollframe .chibis{
